remove_definitions(-DLIBLOGICALACCESS_EXPORTS_DLL)

if (WIN32)
	remove_definitions(-DVERSION_PRODUCTNAME_VALUE="${VERSION_PRODUCTNAME_VALUE}")
endif()

add_subdirectory(twic)
add_subdirectory(desfire)
add_subdirectory(em4102)
add_subdirectory(em4135)
add_subdirectory(generictag)
add_subdirectory(icode1)
add_subdirectory(icode2)
add_subdirectory(indala)
add_subdirectory(infineonmyd)
add_subdirectory(iso7816)
add_subdirectory(iso15693)
add_subdirectory(legicprime)
add_subdirectory(mifare)
add_subdirectory(mifareplus)
add_subdirectory(mifareultralight)
add_subdirectory(prox)
add_subdirectory(proxlite)
add_subdirectory(smartframe)
add_subdirectory(stmlri)
add_subdirectory(tagit)
add_subdirectory(samav2)
add_subdirectory(felica)
add_subdirectory(cps3)
add_subdirectory(epass)
add_subdirectory(topaz)

