
option(BUILD_ISO7819 "iso7816" ON)
if (BUILD_ISO7819)
  add_subdirectory(iso7816)
endif()

add_subdirectory(a3mlgm5600)
add_subdirectory(admitto)
add_subdirectory(axesstmc13)
add_subdirectory(axesstmclegic)
add_subdirectory(deister)
add_subdirectory(elatec)
add_subdirectory(gunnebo)
add_subdirectory(idondemand)
add_subdirectory(ok5553)
add_subdirectory(pcsc)
add_subdirectory(promag)
add_subdirectory(rpleth)
add_subdirectory(rwk400)
add_subdirectory(sciel)
add_subdirectory(smartid)
add_subdirectory(stidstr)
if(WIN32)
add_subdirectory(keyboard)
add_subdirectory(rfideas)
endif()
